# Piper-Dual-VLA-Inference

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: OPEN_SOURCE_CHECKLIST.md  PI05_INFERENCE_MODES.md  PIPER_DUAL_PREFLIGHT.md
example/deploy/: deploy.py
my_robot/: agilex_piperAgx_dual_base.py  agilex_piper_dual_base.py
src/robot/controller/: PiperAgx_controller.py  Piper_controller.py  piper_gravity_config.py
src/robot/policy/ACT/: inference_model.py
src/robot/policy/pi05/: AAC_RTC_参数详解与调试指南.md  AAC_RTC_结合优点分析.md  deploy_pi05_real.py  deploy_pi05_real.yml  deploy_pi05_real_aac.py  deploy_pi05_real_aac_rtc.py  deploy_pi05_real_aac_rtc.yml  deploy_pi05_real_rtc.py  deploy_pi05_real_rtc.yml  deploy_policy.yml  eval.sh  inference_model.py
src/robot/policy/pi05/src/openpi/policies/: policy_config.py
src/robot/policy/pi05/src/openpi/training/: config.py
src/robot/task_instructions/: pen_trans.json  sort_out2_trans1.json  sort_out_40.json  stack_bowls_two.json
task_instructions/: stack_blows_two.json
tools/: test_piper_dual_read_control.py
